Remove duplicated comments
